--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "description": "yet another React component library",
   "license": "ISC",
-  "files": [],
+  "files": ["./dist"],
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/blewisio/rainforest-ui.git"
+  },
   "scripts": {
-    "build": "rollup",
+    "build": "rollup --config rollup.config.js",
     "build:storybook": "build-storybook",
+    "lint": "eslint src",
     "storybook": "start-storybook -p 6006"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^14.1.0",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
@@ -20,6 +31,7 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.2.5",
+    "eslint": "^8.24.0",
     "rollup": "^2.79.1",
     "webpack": "^5.74.0"
   },
