--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "react-dom": ">=16.8"
   },
   "dependencies": {
-    "@emotion/css": "^11.10.0",
+    "clsx": "^1.2.1",
+    "decamelize": "^6.0.0",
     "prop-types": "^15.8.1"
   }
 }
