--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
@@ -55,6 +54,7 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2",
     "webpack": "^5.74.0"
   },
   "peerDependencies": {
