--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.6.4",
   "description": "yet another React component library",
   "license": "ISC",
-  "type": "module",
   "files": [
     "/*"
   ],
@@ -54,6 +53,7 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "rollup": "^2.79.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "webpack": "^5.74.0"
   },
@@ -63,7 +63,6 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
-    "decamelize": "^6.0.0",
     "prop-types": "^15.8.1"
   }
 }
